modified:   site/links.html

--- a/site/links.html
+++ b/site/links.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html style="background-color: rgb(5, 3, 0);">
-<title id="#section6"  > <B> same page links</B></title>
-<head> LINKS : </head>
+<title style="color: aliceblue;"  > <B> same page links</B></title>
+<head id="tops"> LINKS : </head>
 <body>
     <div>
     <a href="#section1" title="shit"> link to section 1</a>
     <a href="#section2"> link to section 2</a>
     <a href="#section3"> link to section 3</a>
     <a href="#section4"> link to section 4</a>
-    <a href = "#section 6 >"> </a></div>
+    <a href = "#section 6 >"> link to section 6</a></div>
+
     <section id="section1" style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;color: azure;">
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis omnis eos commodi aliquam iste? Accusantium ipsum saepe doloremque? Nulla vitae atque delectus magnam, natus ipsam nihil incidunt provident pariatur laborum.<br>
@@ -76,7 +77,7 @@
         
     </p>
     </section>
-    <section id="section3">
+    <section id="section3 " style="color: blanchedalmond; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis omnis eos commodi aliquam iste? Accusantium ipsum saepe doloremque? Nulla vitae atque delectus magnam, natus ipsam nihil incidunt provident pariatur laborum.<br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam maxime pariatur architecto! Reiciendis tenetur cumque eveniet molestiae provident qui enim eum ea a dolore debitis, culpa, vitae quas perspiciatis hic.<br>
@@ -108,7 +109,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla corporis, exercitationem mollitia hic doloremque labore inventore voluptates fugiat tempore pariatur aliquid obcaecati rem natus aliquam. Culpa maiores doloribus minima assumenda!<br>
             
         </p>    </section>
-    <section id="section4">
+    <section id="section4" style="color: blanchedalmond; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis omnis eos commodi aliquam iste? Accusantium ipsum saepe doloremque? Nulla vitae atque delectus magnam, natus ipsam nihil incidunt provident pariatur laborum.<br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam maxime pariatur architecto! Reiciendis tenetur cumque eveniet molestiae provident qui enim eum ea a dolore debitis, culpa, vitae quas perspiciatis hic.<br>
@@ -142,7 +143,8 @@
         </p>    </section>
     <section>
         <div>
-            <h1><a name="section6"> BACK TO TOP </a></h1>
+        <h2><a name="section6" style="color: aliceblue;">section6</a></h2>
+            <a href=#tops> back to top </a>
         </div>
     </section>
 </body>
