new file:   Andrew-Tate-1.jpg 	new file:   bugatti copy.jpeg 	new file:   bugatti.jpeg 	new file:   css1.html 	modified:   links.html 	modified:   lis.html 	new file:   song1.html 	new file:   song2.html 	new file:   test.html

--- a/site/links.html
+++ b/site/links.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html>
     
-    <head>
+    <head >
+        <style>
+            p{
+               color:blue;
+               font-size:20px;
+               width:100px
+            }
+              </style> </head>
        <title> PAGE</title> 
+        <link rel="icon" type="image/png" href="ScreenShot-2023-8-6_15-43-18.png">
        <ul> 
             <h1 id="top"> THE PAGE CONTENTS</h1>
             <li><h1><a href="#section1">TO THE SECTION 1</a></li>
@@ -15,7 +23,7 @@
         <section id="section1">
             <div>
                 <h2> section1</h2>
-                <p>
+                <pre>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam voluptatem quo omnis beatae, provident facilis earum temporibus inventore culpa praesentium dicta at atque reprehenderit enim reiciendis, laboriosam quod tempora possimus.
                     <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi laudantium beatae nihil. Assumenda similique accusamus voluptates nam, repellendus natus, dolore iusto culpa deleniti nobis excepturi nulla necessitatibus sapiente explicabo et!
                     <br>  Lorem ipsum dolor          sit amet consectetur adipisicing elit. Corporis, exercitationem. Vel quaerat repellendus voluptate amet deserunt? Quod non officiis illo, iure, ipsa rerum voluptatibus, deleniti error nostrum veniam quibusdam libero!
@@ -46,7 +54,7 @@
                     <br>  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium dignissimos dolores voluptates illo, quis accusamus. Quasi a pariatur aspernatur impedit fuga facere voluptas blanditiis natus recusandae. Adipisci, optio. Ad, officia.
                     <br> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis porro culpa blanditiis itaque ab eligendi! Molestias cum ex accusamus amet libero eum, excepturi exercitationem sequi, ipsum, autem repellat laboriosam aut.
                     <br> <b> Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ullam doloremque nihil repellendus iure totam ratione alias quam eveniet tempora a adipisci, accusamus iste similique dolorem, aut hic porro incidunt?</b>
-                </p>
+                </pre>
             </div>
         </section>
         <section id="section2">
@@ -67,9 +75,9 @@
                     <br> <b> Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ullam doloremque nihil repellendus iure totam ratione alias quam eveniet tempora a adipisci, accusamus iste similique dolorem, aut hic porro incidunt?</b>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam voluptatem quo omnis beatae, provident facilis earum temporibus inventore culpa praesentium dicta at atque reprehenderit enim reiciendis, laboriosam quod tempora possimus.
                     <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi laudantium beatae nihil. Assumenda similique accusamus voluptates nam, repellendus natus, dolore iusto culpa deleniti nobis excepturi nulla necessitatibus sapiente explicabo et!
-                    <br>  Lorem ipsum dolor          sit amet consectetur adipisicing elit. Corporis, exercitationem. Vel quaerat repellendus voluptate amet deserunt? Quod non officiis illo, iure, ipsa rerum voluptatibus, deleniti error nostrum veniam quibusdam libero!
+                    <br>  Lorem ipsum <div style="color: rgb(196, 255, 200);">dolor          sit amet consectetur adipisicing elit. Corporis, exercitationem. Vel quaerat repellendus voluptate amet deserunt? Quod non officiis illo, iure, ipsa rerum voluptatibus, deleniti error nostrum veniam quibusdam libero!
                     <br>  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium dignissimos dolores voluptates illo, quis accusamus. Quasi a pariatur aspernatur impedit fuga facere voluptas blanditiis natus recusandae. Adipisci, optio. Ad, officia.
-                    <br> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis porro culpa blanditiis itaque ab eligendi! Molestias cum ex accusamus amet libero eum, excepturi exercitationem sequi, ipsum, autem repellat laboriosam aut.
+                    <br> Lorem ipsum, dolor sit</div> amet consectetur adipisicing elit. Officiis porro culpa blanditiis itaque ab eligendi! Molestias cum ex accusamus amet libero eum, excepturi exercitationem sequi, ipsum, autem repellat laboriosam aut.
                     <br> <b> Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ullam doloremque nihil repellendus iure totam ratione alias quam eveniet tempora a adipisci, accusamus iste similique dolorem, aut hic porro incidunt?</b>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam voluptatem quo omnis beatae, provident facilis earum temporibus inventore culpa praesentium dicta at atque reprehenderit enim reiciendis, laboriosam quod tempora possimus.
                     <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi laudantium beatae nihil. Assumenda similique accusamus voluptates nam, repellendus natus, dolore iusto culpa deleniti nobis excepturi nulla necessitatibus sapiente explicabo et!
