--- a/site/lis.html
+++ b/site/lis.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
-<html style="background-color: rgb(5, 3, 0);">
+<html>
     <title>
         THE list to buy
     </title>
     <head>
-        <h1>
+    <style>
+     p{
+        color:blue;
+        font-size:20px;
+        width:100px
+     }
+       </style> <h1>
             THE DINNER ITEMS:
         </h1>
     </head>
     <body>
         <div>
-        <ul style="color: beige;">
+        <ul>
             <li> beef</li>
             <li> chicken</li>
             <li> ground</li>
@@ -23,5 +29,16 @@
             </li>
             <li> pepoto bismol</li>
         </ul>
-   </div> </body>
+   </div>
+<dl >
+    <dt>
+        DRAGON
+    </dt>
+    <DD> A MYTHICAL CREATURE WHICH HAS WINGS</DD>
+    <DT>
+        WEREWOLF
+    </DT>
+    <DD> AN INDIVIDUAL THAT CAN SHAPESHIFT TO AN WOLF</DD>
+</dl> 
+</body>
 </html>
